# neosintez_api

./: .gitignore  .pre-commit-config.yaml  README.md  TASKS.md  neosintez_plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: pytest.yml
neosintez_api/: __init__.py  __main__.py  client.py  config.py  excel_import.py  exceptions.py  hierarchical_excel_import.py  model_utils.py  models.py  swagger.json  utils.py
neosintez_api/cli/: __init__.py
neosintez_api/cli/commands/: class_.py  import_excel.py  object.py
neosintez_api/core/: __init__.py  client.py  enums.py  generate_models.py  retry.py
neosintez_api/core/resources/: __init__.py  attributes.py  base.py  classes.py  collections.py  content.py  objects.py
neosintez_api/resources/: __init__.py  attributes.py  base.py  classes.py  objects.py
neosintez_api/services/: __init__.py  cache.py  class_service.py  collection_service.py  content_service.py  excel_importer.py  models.py  object_search_service.py  object_service.py  resolvers.py
neosintez_api/services/factories/: __init__.py  model_factory.py  object_to_model_factory.py
neosintez_api/services/mappers/: __init__.py  object_mapper.py
scripts/: analyze_template.py  check_imported_objects.py  check_json.py  create_and_read_object_from_pydantic_model.py  create_folder.py  create_import_template.py  create_object_from_pydantic_model.py  create_test_excel.py  debug_excel_import.py  debug_hierarchy.py  example_class_service.py  example_collections.py  example_content_upload.py  example_crud_cycle.py  example_debug_fluent_search_issue.py  example_declarative_model_crud.py  example_dynamic_factory.py  example_dynamic_model_crud.py  example_fluent_search.py  example_full_update_cycle.py  example_get_children.py  example_getting_objects_from_starting_page.py  example_hierarchical_import.py  example_import_with_file_attr.py  example_read_object_by_id.py  explore_api.py  get_all_attributes.py  get_attribute_meta.py  get_class_attributes.py  get_class_info_and_attributes.py  get_classes_example.py  get_classes_for_import.py  get_classes_info.py  get_document_attributes.py  get_objects_by_class.py  import_excel_with_pydantic.py  import_fix.py  import_ks2_xlsx_template.py  run_tests.py  simple_create_object.py  (+5 more)
tests/: README.md  __init__.py  conftest.py  test_cache.py  test_integration.py  test_type_mapping.py  test_validation.py
tests/core/: _attribute_types.py  test_api.py  test_object_search.py  test_utils.py
tests/core/resources/: test_classes_resource.py
tests/services/: test_dynamic_model_crud.py  test_excel_importer.py  test_object_service_declarative.py  test_resolvers.py
tests/services/factories/: test_dynamic_model_factory.py
